[BE] Feat: isActive 위치 변경 및 전투, 분석, 기여도 조회 rank부분을 제외하고 구현